--- a/smurfs/src/components/App.css
+++ b/smurfs/src/components/App.css
@@ -2,27 +2,23 @@
   text-align: center;
 }
 
-.App-logo {
-  animation: App-logo-spin infinite 20s linear;
-  height: 80px;
+.form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-evenly;
+  margin: 2rem auto;
+  width: 40%;
+  padding: 1rem 0; 
+  border: 1px solid silver;
+  border-radius: 10px;
 }
 
-.App-header {
-  background-color: #222;
-  height: 150px;
-  padding: 20px;
-  color: white;
+.form-container input {
+  width: 60%;
+  margin: .3rem auto;
+  font-size: 1.1rem;
 }
 
-.App-title {
-  font-size: 1.5em;
-}
-
-.App-intro {
-  font-size: large;
-}
-
-@keyframes App-logo-spin {
-  from { transform: rotate(0deg); }
-  to { transform: rotate(360deg); }
+.loader {
+  margin: 1rem;
 }
